--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -13,4 +13,8 @@ jobs:
           node -v
           npm -v
           uname -a
-        
+      - name: python command
+        run: |
+          import platform
+          print(platform.processor())
+        shell: python
