--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -5,6 +5,7 @@ on: [push]
 jobs:
   run-shell-commands:
     runs-on: ubuntu-latest
+    environment: stage
     steps:
       - name: echo a string
         run: echo "Hello World"
