--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -16,6 +16,7 @@ on:
 jobs:
   run-shell-commands:
     runs-on: ubuntu-latest
+    if: ${{ github.event.inputs.environment }} == 'dev'
     environment: stage
     steps:
       - name: echo a string
