--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -18,6 +18,10 @@ jobs:
     runs-on: ubuntu-latest
     environment: dev
     steps:
+    
+      - name: Checkout code
+        uses: actions/checkout@v2
+        
       - name: echo a string
         run: echo "Hello World, Deploying in ${{ github.event.inputs.Environ }}"
       - name: multiline scripe
