--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -20,7 +20,9 @@ jobs:
     steps:
     
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
         
       - name: echo a string
         run: echo "Hello World, Deploying in ${{ github.event.inputs.Environ }}"
