--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -30,7 +30,13 @@ jobs:
         run: |
           git ls-tree --name-only HEAD | xargs -I {} sh -c 'touch -d "$(git log -1 --format="%ci" "{}")" "{}"'
           echo "------------------------------------------------"
+          date
+          echo "------------------------------------------------"
           ls -lthr
+          echo "------------------------------------------------"
+          ls -lthr Test1/
+          echo "------------------------------------------------"
+          ls -lthr Test2/
           echo "------------------------------------------------"
           node -v
           npm -v
